FIX issues in the video pages that land in the terminal

--- a/docs/de-de/modules/videos/pages/auftraege-mit-status.adoc
+++ b/docs/de-de/modules/videos/pages/auftraege-mit-status.adoc
@@ -16,7 +16,7 @@ xref:videos:auftraege-mit-status-individualisierung.adoc#video[Individualisiere 
 
 video::216985157[vimeo]
 
-// tag::transkript[]
+//tag::transkript[]
 [.collapseBox]
 .Transkript
 --
@@ -54,3 +54,6 @@ Beachte bitte, dass du die Status 3,5,7,9 und 13 nicht ändern solltest, da dies
 Problemen führen kann.
 
 Am besten solltest du dich direkt weiter mit der Auftragsabwicklung beschäftigen. Viel Spaß dabei.
+
+--
+//end::transkript[]
