--- a/docs/de-de/modules/videos/pages/auftragsabwicklung-erste-schritte.adoc
+++ b/docs/de-de/modules/videos/pages/auftragsabwicklung-erste-schritte.adoc
@@ -21,7 +21,7 @@ xref:videos:erste-schritte-mitarbeiter.adoc#video[Mitarbeiter in Kenntnis setzen
 
 video::219645061[vimeo]
 
-// tag::transkript[]
+//tag::transkript[]
 [.collapseBox]
 .Transkript
 --
@@ -58,3 +58,6 @@ informiert, damit dieser den Versand einleiten kann.
 
 Du könntest beispielsweise zusätzlich eine Ereignis-Aktion anlegen, die dem Angestellten direkt spezielle Kundenwünsche
 mitteilt. All die Automatismen die innerhalb deiner Auftragsabwicklung zum Greifen kommen nimmt dir die Last, selber tätig zu werden, von den Schultern.
+
+--
+//end::transkript[]
