--- a/docs/de-de/modules/videos/pages/automatisierte-retourenanlage.adoc
+++ b/docs/de-de/modules/videos/pages/automatisierte-retourenanlage.adoc
@@ -20,7 +20,7 @@ xref:videos:automatisierte-retourenanlage-prozessindividualisierung.adoc#video[P
 
 video::243261941[vimeo]
 
-// tag::transkript[]
+//tag::transkript[]
 [.collapseBox]
 .Transkript
 --
@@ -48,3 +48,6 @@ Prozess erstmal nur darum geht, eine Retoure überhaupt anzulegen, sparst du dir
 
 Also - je nachdem wie er in deinen Workflow passt, kannst du dir einen ganz individuellen Prozess erstellen. Für den Start lädst du dir die Standardvorlage also aus der Beschreibung dieses Videos
 herunter, importierst ihn in dein System und beginnst mit der Individualisierung. Retoure anlegen in Lichtgeschwindigkeit? Dr. Prozess ist zur Stelle!
+
+--
+//end::transkript[]
