--- a/docs/de-de/modules/videos/pages/gewaehrleistung.adoc
+++ b/docs/de-de/modules/videos/pages/gewaehrleistung.adoc
@@ -20,7 +20,7 @@ xref:videos:gewaehrleistung-reparatur.adoc#video[Reparatur eindes defekten Artik
 video::239059034[vimeo]
 
 
-// tag::transkript[]
+//tag::transkript[]
 [.collapseBox]
 .Transkript
 --
@@ -64,3 +64,6 @@ der Reparatur festlegen. Und darunter kannt du den Artikelzustand des eingesende
 Hier kannst du einen Reparaturstatus und den Artikelzustand wählen, den du grad angelegt hast. Mit dem Speichern hast du die Reparatur im System angelegt. Anschließend wird der reparierte Artikel an deinen Kunden versendet.
 
 Schön, dass du die Serie der Videos angeschaut hast. Ich hoffe du hast jetzt einen Eindruck gewonnen, wie du in plentymarkets mit Retouren umgehen kannst.
+
+--
+//end::transkript[]
