--- a/docs/de-de/modules/videos/pages/manuelle-retourenanlage.adoc
+++ b/docs/de-de/modules/videos/pages/manuelle-retourenanlage.adoc
@@ -20,7 +20,7 @@ xref:videos:manuelle-retourenanlage-warenkorbrueckbuchung.adoc#video[Zurückgesc
 
 video::239095119[vimeo]
 
-// tag::transkript[]
+//tag::transkript[]
 [.collapseBox]
 .Transkript
 --
@@ -50,3 +50,6 @@ Wenn du den Artikelstatus angegeben hast solltest du den zurückgeschickten Arti
 und klickst dann Warenausgang zurücksetzen. In diesem Fenster kannst eine bestimmte Anzahl an in der Retoure enthaltenen Artikel zurückbuchen außerdem gibst du noch an, in welches Lager der Artikel eingebucht wird.
 
 Und fertig ist die manuelle Anlage einer Retoure .Nun bist du bereit dir das nächste Video zum Thema Rückerstattung anzuschauen.
+
+--
+//end::transkript[]
