--- a/docs/de-de/modules/videos/pages/retoureneinstellungen.adoc
+++ b/docs/de-de/modules/videos/pages/retoureneinstellungen.adoc
@@ -19,7 +19,7 @@ xref:videos:retoureneinstellungen-retourenanlage-durch-kunden#video[Sollen Kunde
 
 video::234667730[vimeo]
 
-// tag::transkript[]
+//tag::transkript[]
 [.collapseBox]
 .Transkript
 --
@@ -63,3 +63,6 @@ Super, so funktioniert also der Retourenprozess, wenn er von einem deiner Kunden
 Möglichkeit haben die Retoure selbstständig anzulegen. Wenn du hier inaktiv wählst hat der Kunde keine Möglichkeit eine Retoure selbsständig
 anzulegen und die Retoure kommt auch nicht automatisch in dein System. In diesem Fall musst du die Retoure händisch in deinem System anlegen und genau das
 zeige ich dir in dem folgenden Video. Also hol dir eine Tasse Kaffee und lehne dich zurück - wir machen direkt weiter!
+
+--
+//end::transkript[]
