--- a/docs/de-de/modules/videos/pages/schnellfunktionen-auftragsuebersicht.adoc
+++ b/docs/de-de/modules/videos/pages/schnellfunktionen-auftragsuebersicht.adoc
@@ -14,7 +14,7 @@
 
 video::219827626[vimeo]
 
-// tag::transkript[]
+//tag::transkript[]
 [.collapseBox]
 .Transkript
 --
@@ -58,3 +58,6 @@ wesentlichen Einstellungen und Optionen des jeweiligen Auftrags zu gehen.
 
 Wenn Du wissen möchtest, welche weiteren Möglichkeiten du in deiner Auftragsabwicklung hast schaue dir doch
 ganz einfach die weiteren Videos zu diesem Thema an.
+
+--
+//end::transkript[]
