--- a/docs/de-de/modules/videos/pages/stornobeleg.adoc
+++ b/docs/de-de/modules/videos/pages/stornobeleg.adoc
@@ -14,7 +14,7 @@
 
 video::217136257[vimeo]
 
-// tag::transkript[]
+//tag::transkript[]
 [.collapseBox]
 .Transkript
 --
@@ -54,3 +54,6 @@ Letztlich gibt es also nur zwei Dinge, die du beachten solltest. Erstens: Erstel
 um während deiner Auftragsabwicklung eingreifen zu können. Zweitens: Solltest Du dennoch einen gesperrten Auftrag
 bearbeiten müssen, verwende den Stornobeleg, um einen gesperrten Auftrag zu entsperren. Nach der Bearbeitung des
 Auftrages erstellst Du eine neue Rechnung und bist auf der sicheren Seite!
+
+--
+//end::transkript[]
