--- a/docs/en-gb/modules/videos/pages/automatic-returns.adoc
+++ b/docs/en-gb/modules/videos/pages/automatic-returns.adoc
@@ -23,7 +23,7 @@ xref:videos:automatic-returns-default-values.adoc#video[Customising default valu
 
 video::243256565[vimeo]
 
-// tag::transcript[]
+//tag::transcript[]
 [.collapseBox]
 .Transcript
 --
@@ -63,3 +63,6 @@ The next time you create a return, these values will be suggested by default.
 And there you have it! A fully customised return process, which meets your business' needs.
 Simply download the process file and import it into your system.
 Then customise the process as needed and use it to automatically create returns in your plentymarkets system.
+
+--
+//end::transcript[]
