--- a/docs/en-gb/modules/videos/pages/compensating-customers.adoc
+++ b/docs/en-gb/modules/videos/pages/compensating-customers.adoc
@@ -21,7 +21,7 @@ xref:videos:compensating-customers-repair.adoc#video[Repairing a defective item 
 video::238946285[vimeo]
 
 
-// tag::transcript[]
+//tag::transcript[]
 [.collapseBox]
 .Transcript
 --
@@ -67,3 +67,6 @@ Here you can select the status and the condition that you saved just a moment ag
 And then you can create the repair. Once the defective item has been fixed, it's shipped back to the customer just like any other order.
 
 Thanks for watching this series of videos and I hope you enjoyed learning how plentymarkets assists you in managing returned items.
+
+--
+//end::transcript[]
