--- a/docs/en-gb/modules/videos/pages/fulfill-orders-with-processes.adoc
+++ b/docs/en-gb/modules/videos/pages/fulfill-orders-with-processes.adoc
@@ -19,7 +19,7 @@ link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Picklis
 
 video::225269182[vimeo]
 
-// tag::transcript[]
+//tag::transcript[]
 [.collapseBox]
 .Transcript
 --
@@ -40,3 +40,6 @@ If you use DHL Shipping in your shipping centre, your shipping labels are automa
 
 Now you might be wondering why the invoice and delivery note and all other documents are printed after the shipping step and not directly when you first receive the order... Well, creating an invoice locks your order which ensures regulatory compliance. Often sellers create an invoice too early in the order process only to realise shortly after that there's a mistake on it. If the invoice has already been generated, you'd have to create a reversal document to unlock your order and make the necessary changes.
 For your customers' sake, include the return form and label in the package. But just so you know, a label kann only be created in this process if your working with DHL Return Online.
+
+--
+//end::transcript[]
