--- a/docs/en-gb/modules/videos/pages/fulfilling-orders.adoc
+++ b/docs/en-gb/modules/videos/pages/fulfilling-orders.adoc
@@ -21,7 +21,7 @@ xref:videos:fulfilling-orders-notifying-employees.adoc#video[Notifying employees
 
 video::218787269[vimeo]
 
-// tag::transcript[]
+//tag::transcript[]
 [.collapseBox]
 .Transcript
 --
@@ -56,3 +56,6 @@ Simply create an event procedure to notify specific employees when an order has 
 Or create one that notifies employees of any special customer requests or order notes.
 
 From automatic status changes and order confirmations, to automatic records of payment and employee notifications, plentymarkets takes the weight off your shoulders and help you keep the show running smoothly.
+
+--
+//end::transcript[]
