--- a/docs/en-gb/modules/videos/pages/order-settings.adoc
+++ b/docs/en-gb/modules/videos/pages/order-settings.adoc
@@ -23,7 +23,7 @@ xref:videos:order-settings-e-mail-templates.adoc#video[E-Mail templates (3:01)]
 
 video::218785852[vimeo]
 
-// tag::transcript[]
+//tag::transcript[]
 [.collapseBox]
 .Transcript
 --
@@ -55,3 +55,6 @@ Just make sure that you've selected the invoice as the PDF attachment. And that 
 
 Looking sharp! Now you can get to work knowing you'll make a great first impression. Or if any of that was a bit too fast for you, just check out the rest of our video tutorials, which break down topics like shipping and payment into even smaller pieces and walk you through every step of the process.
 We hope you'll have a great first day!
+
+--
+//end::transcript[]
