--- a/docs/en-gb/modules/videos/pages/quicklinks-order-overview.adoc
+++ b/docs/en-gb/modules/videos/pages/quicklinks-order-overview.adoc
@@ -16,7 +16,7 @@
 
 video::219701201[vimeo]
 
-// tag::transcript[]
+//tag::transcript[]
 [.collapseBox]
 .Transcript
 --
@@ -43,3 +43,6 @@ Yes. We. Can! Simply generate the invoice, click the little email button here an
 Obviously this was just the beginning. Your order overview provides you with loads of additional features and info.
 It's kind of like the floor plan of a building. It's what you'd consult to get the lay of the land - where you would survey your orders at a glance and access relevant options at the click of a button.
 To learn more about order processing, just check out our other videos!
+
+--
+//end::transcript[]
