--- a/docs/en-gb/modules/videos/pages/return-settings.adoc
+++ b/docs/en-gb/modules/videos/pages/return-settings.adoc
@@ -20,7 +20,7 @@ xref:videos:return-settings-return-through-customer.adoc#video[Letting customers
 
 video::236753676[vimeo]
 
-// tag::transcript[]
+//tag::transcript[]
 [.collapseBox]
 .Transcript
 --
@@ -63,3 +63,6 @@ Now let's talk about what happens if returns are deactivated. If you select "Dea
 Instead, you'll need to open up plentymarkets and create the return manually.
 
 Stay tuned because that's exactly where we're going in the next video. So grab a cup of coffee, and when you're ready, continue on with the next video, where you'll learn how to manually create returns in your plentymarkets back end.
+
+--
+//end::transcript[]
