update style for configs - DE

--- a/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-listing-merkmale.adoc
+++ b/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-listing-merkmale.adoc
@@ -12,7 +12,7 @@ Exportiere zunächst die Listings, zu denen du das Merkmal hinzufügen möchtest
 
 Für die eBay-Merkmale benötigst du die Felder *EbayItemSpecificsName* und *EbayItemSpecificsValue*.
 
-[instruction]
+[.instruction]
 Datenformat erstellen:
 
 . Öffne das Menü *Daten » Dynamischer Export*.
@@ -39,7 +39,7 @@ _Beispiel:_ In der Spalte *Name* die Werte "Farbe", "Größe" kommagetrennt eing
 
 Mit dem Import-Tool im Menü *Daten » Import* kannst du nun die CSV-Datei mit den neuen Merkmalen in dein plentymarkets System importieren. Dazu erstellst du einen Import des Typs *Market-Listing*.
 
-[instruction]
+[.instruction]
 Import erstellen:
 
 . Öffne das Menü *Daten » Import*.
@@ -56,7 +56,7 @@ Import erstellen:
 
 Du hast nun die CSV-Datei erfolgreich hochgeladen. Als nächstes nimmst du die Einstellungen für den Abgleich und die Zuordnungen vor.
 
-[instruction]
+[.instruction]
 Abgleich einstellen:
 
 . Klicke auf *Abgleich* in der linken Seite des Fensters.
@@ -67,7 +67,7 @@ Abgleich einstellen:
 
 Nimm als nächstes die Einstellungen für die Zuordnung vor.
 
-[instruction]
+[.instruction]
 Zuordnung einstellen:
 
 . Klicke auf *Zuordnung* in der linken Seite des Fensters.
@@ -80,7 +80,7 @@ In diesem Bereich ordnest du die Felder aus deiner CSV-Datei den plentymarkets D
 
 Auf der linken Seite im Bereich *Importdaten* siehst du die Bezeichnungen in der Kopfzeile aus deiner CSV-Datei. Diese Bezeichnungen hat plentymarkets bereits automatisch aus deiner CSV-Datei übernommen. Auf der rechten Seite im Bereich *plentymarkets Datenfelder* ordnest du nun das entsprechende Gegenstück zu.
 
-[instruction]
+[.instruction]
 Beispiel: Quellen für eBay-Merkmale dem passenden plentymarkets Datenfeld zuordnen
 
 . Auf der linken Seite siehst du die Quelle *MLID*. Klicke auf der rechten Seite in dieselbe Zeile und ordne das Datenfeld *MLID* zu, indem du ein Häkchen setzt.
