--- a/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-listings-erstellen.adoc
+++ b/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-listings-erstellen.adoc
@@ -29,7 +29,7 @@ Wenn bereits ein Listing vorhanden ist und du nur ein Market-Listing erstellen m
 
 Mit dem Import-Tool im Menü *Daten » Import* kannst du nun die CSV-Datei mit den neuen Listings in dein plentymarkets System importieren. Dazu erstellst du einen Import des Typs Market-Listing.
 
-[instruction]
+[.instruction]
 Import erstellen:
 
 . Öffne das Menü *Daten » Import*.
@@ -52,7 +52,7 @@ Import erstellen:
 
 Du hast nun die CSV-Datei erfolgreich hochgeladen. Als nächstes nimmst du die Einstellungen für den Abgleich und die Zuordnungen vor.
 
-[instruction]
+[.instruction]
 Abgleich einstellen:
 
 . Klicke auf *Abgleich* in der linken Seite des Fensters.
@@ -63,7 +63,7 @@ Abgleich einstellen:
 
 Nimm als nächstes die Einstellungen für die Zuordnung vor.
 
-[instruction]
+[.instruction]
 Zuordnung einstellen:
 
 . Klicke auf *Zuordnung* in der linken Seite des Fensters.
