--- a/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
+++ b/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
@@ -209,7 +209,7 @@ include::partial$sku-manuell.adoc[]
 
 Für Produkte, die du auf Netto verkaufst, muss angegeben werden, ob die Variante einen Grundpreis hat. Im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Varianten-Tab: Einstellungen* gibst du mit der Option *Grundpreisanzeige* an, ob eine Variante einen Grundpreis benötigt. Wenn du die Option *Grundpreisanzeige* nicht aktivierst, wird *nein* übertragen. Die Variante wird also als nicht grundpreispflichtig gekennzeichnet.
 
-[instruction]
+[.instruction]
 Grundpreisanzeige an Variante aktivieren:
 
 . Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Varianten-Tab: Einstellungen*.
@@ -417,7 +417,7 @@ Die Kennzeichnung eines Artikels als Elektroprodukt ist zwingend erforderlich. A
 
 In plentymarkets wird die Kennzeichnung eines Artikels als Elektroprodukt über ein Merkmal umgesetzt. Ein Merkmal für Elektroprodukte erstellst du im Menü *Einrichtung » Artikel » Merkmale*.
 
-[instruction]
+[.instruction]
 Merkmal für Elektroprodukt erstellen:
 
 . Öffne das Menü *Einrichtung » Artikel » Merkmale*.
@@ -433,7 +433,7 @@ Merkmal für Elektroprodukt erstellen:
 
 Das Merkmal *Elektroprodukt* verknüpfst du dann wie im Folgenden beschrieben im *Tab: Merkmale* eines Netto eStores-Artikels.
 
-[instruction]
+[.instruction]
 Elektroprodukt-Merkmal mit Netto eStores-Artikel verknüpfen:
 
 . Öffne das Menü *Artikel » Artikel bearbeiten*.
@@ -454,7 +454,7 @@ Wenn du grundpreispflichtige Artikel nicht über die Option *Grundpreisanzeige* 
 
 Ein Merkmal für die Grundpreisflicht erstellst du im Menü *Einrichtung » Artikel » Merkmale*.
 
-[instruction]
+[.instruction]
 Merkmal für Grundpreispflicht erstellen:
 
 . Öffne das Menü *Einrichtung » Artikel » Merkmale*.
@@ -469,7 +469,7 @@ Merkmal für Grundpreispflicht erstellen:
 
 Das Merkmal *Grundpreispflicht* verknüpfst du dann wie im Folgenden beschrieben im *Tab: Merkmale* eines Netto eStores-Artikels.
 
-[instruction]
+[.instruction]
 Grundpreispflicht-Merkmal mit Netto eStores-Artikel verknüpfen:
 
 . Öffne das Menü *Artikel » Artikel bearbeiten*.
