fix warnings - DE

--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -444,32 +444,32 @@ Voraussetzung für diese Vorgehensweise ist, dass bereits ein Artikel/eine Varia
 .Nutze die Eigene Zuordnung zum Austauschen von Informationen
 video::328394174[vimeo]
 
-[[bild-daten-importieren]]
+[[bild-daten-importieren-versandprofil]]
 .Versandprofil
 image::daten:versandprofil.png[]
 
 Um einen Artikel/eine Variante mit einem Versandprofil zu verknüpfen, wird die ID benötigt. Denn allein mit dem Namen des Versandprofils, der in der Importdatei steht, kann keine Verknüpfung erstellt werden.
 
-[[bild-daten-importieren]]
+[[bild-daten-importieren-artikel-id]]
 .Artikel-ID
 image::daten:artikel-id.png[]
 
 Verwende dafür die eigene Zuordnung im Import-Tool, denn dort werden die Daten während des Imports manipuliert. Wähle dazu als Quelle der Importdaten den Wert *Eigene Zuordnung*.
 
-[[bild-daten-importieren]]
+[[bild-daten-importieren-zuordnung]]
 .Eigene Zuordnung
 image::daten:eigene-zuordnung.png[]
 
 Wähle bei *Typ* die Spalte aus der Importdatei. In diesem Fall ist es die Spalte *Versandprofil*.
 
-[[bild-daten-importieren]]
+[[bild-daten-importieren-spalte]]
 .Spalte der Importdatei wählen
 image::daten:typ.png[]
 
 Bestimme nun, welcher Wert in der Importdatei zu welchem Wert geändert werden soll, um den Import erfolgreich durchführen zu können. In diesem Fall soll DPD zur ID des Versandprofils (hier ID 7) geändert werden. Das Gleiche kannst du auch für mehrere Versandprofile tun, indem du noch weitere eigene Zuordnungen hinzufügst.
 Führe anschließend den Import aus. Das Versandprofil wird verknüpft.
 
-[[bild-daten-importieren]]
+[[bild-daten-importieren-wert]]
 .Wert bestimmen
 image::daten:wert-bestimmen.png[]
 
