--- a/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
+++ b/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
@@ -664,7 +664,7 @@ Wenn der Outbound-Auftrag seitens eBay Fulfillment by Orange Connex noch stornie
 Wenn eine Stornierung nicht mehr möglich ist, weil das Paket bereits vollständig verpackt oder sogar schon abgeholt wurde, verbleibt der Outbound-Auftrag im Status der Stornierungsanfrage und dein plentymarkets System erstellt eine Auftragsnotiz, dass die Stornierung nicht möglich war.
 ====
 
-[instruction]
+[.instruction]
 Ereignisaktion zum Senden einer Stornierungsanfrage einrichten:
 
 . Öffne im plentymarkets Backend das Menü *Einrichtung » Aufträge » Ereignisse*.
@@ -768,9 +768,9 @@ Wähle im Menü *Einrichtung » Aufträge » Einstellungen* in der Zeile *Zuordn
 [.collapseBox]
 .Ich erhalte eine Fehlermeldung mit "invalid_grant" oder "invalid refresh token". Was muss ich tun?
 --
-Du erhältst den folgenden (oder einen ähnlichen) Fehler? 
+Du erhältst den folgenden (oder einen ähnlichen) Fehler?
 
-`{„error“:„invalid_grant“,„error_description“:"Invalid refresh token:` 
+`{„error“:„invalid_grant“,„error_description“:"Invalid refresh token:`
 
 Dann ist der Refresh token von Orange Connex abgelaufen. Nun musst du folgendes tun:
 
@@ -778,5 +778,3 @@ Dann ist der Refresh token von Orange Connex abgelaufen. Nun musst du folgendes 
 . Öffne den Schritt *Authentifizierung* und gib deine Zugangsdaten erneut ein. +
 → Ein weitere Hinweis dafür, dass der Refresh token von Orange Connex abgelaufen ist, dass du den Schritt *Authentifizierung* wieder im Assistenten siehst (denn dieser ist sonst nach dem erstmaligen Authentifizieren nicht mehr sichtbar im Assistenten).
 --
-
-
