--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -138,7 +138,7 @@ REST-API-Zugang erstellen:
 → Das Konto wird erstellt. +
 *_Tipp:_* Für das Konto müssen keine Rechte freigegeben werden. Es reicht, dass das Konto im System existiert.
 
-[#setup]
+[#base-settings]
 === Grundeinstellungen vornehmen
 
 [.instruction]
@@ -204,7 +204,7 @@ include::partial$assistant-basic-instructions.adoc[]
 .Schritt *Aufträge*
 --
 
-[[assistant-zalando-orders]]
+[[table-assistant-zalando-orders]]
 [cols="1,3a"]
 |===
 |Einstellung |Erläuterung
@@ -310,6 +310,7 @@ include::partial$assistant-basic-instructions.adoc[]
 | include::page$zalando.adoc[tag=zalando-countries]
 
 *_Du kannst keine Länder wählen?_* Dann wurde dein Konto noch nicht mit mit dem zDirect-Konto verknüpft. (<<#link-zDirect, Was muss ich tun?>>)
+|===
 --
 
 [.collapseBox]
