--- a/docs/de-de/modules/maerkte/partials/zalando-order-documents.adoc
+++ b/docs/de-de/modules/maerkte/partials/zalando-order-documents.adoc
@@ -179,7 +179,7 @@ DOCX-Vorlage für Rechnungen personalisieren:
 
 image::maerkte:zalando-DE-invoice-footer.png[]
 
-[#invoice-pdf-personalize]
+[#invoice-pdf-upload]
 ==== Personalisierte PDF-Vorlage für Zalando DE-Rechnungen hochladen
 
 Gehe wie unten beschrieben vor, um die personalisierte PDF-Vorlage für Rechnungen in plentymarkets hochzuladen. Die PDF-Datei darf maximal 150 kB groß sein.
