fix warnings - de

--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -141,7 +141,7 @@ In der ZIP-Datei link:{valid-values-zip}[{market}: Gültige Werte^] findest du C
 include::partial$mirakl-data-link-categories.adoc[]
 
 [#eigenschaften-mit-varianten-verknuepfen]
-==== Eigenschaften mit Varianten verknüpfen und Werte speichern
+== Eigenschaften mit Varianten verknüpfen und Werte speichern
 
 include::partial$properties-link.adoc[]
 
@@ -197,9 +197,9 @@ Aufträge, die auf Voelkner erzeugt wurden, werden alle 15 Minuten in dein plent
 
 So läuft die Auftragsabwicklung bei Voelkner ab:
 
-* Voelkner akzeptiert den Auftrag und zieht die Zahlung ein. 
+* Voelkner akzeptiert den Auftrag und zieht die Zahlung ein.
 * Mit der Zahlungszusicherung werden die Rechnungs- und Lieferadresse am Auftrag in deinem plentymarkets System aktualisiert.
-* Über eine Ereignisaktion werden Versanddienstleister und Paketnummer am Auftrag in Mirakl aktualisiert. 
+* Über eine Ereignisaktion werden Versanddienstleister und Paketnummer am Auftrag in Mirakl aktualisiert.
 * Im nächsten Schritt wird Voelkner über eine weitere Ereignisaktion über den Versand informiert.
 * Die von Voelkner erstellte Rechnung wird zum Auftrag in dein plentymarkets System importiert.
 * Über eine Ereignisaktion wird eine Rechnung an Voelkner gesendet.
