--- a/docs/de-de/modules/maerkte/partials/zalando-order-documents.adoc
+++ b/docs/de-de/modules/maerkte/partials/zalando-order-documents.adoc
@@ -291,7 +291,7 @@ DOCX-Vorlage für Rücksendescheine personalisieren:
 *_Tipp:_* Um die Layout-Vorgaben von Zalando zu erfüllen empfehlen wir dir, die Retourenhinweise in der PDF-Vorlage zu lassen. Wenn du keine Kosmetikartikel verkaufst, löschst du dann nur den Hinweis zu Kosmetikretouren.
 . Speichere die Vorlage im PDF-Format.
 
-[#invoice-pdf-upload]
+[#return-pdf-upload]
 ==== Personalisierte PDF-Vorlage für Rücksendescheine hochladen
 
 Gehe wie unten beschrieben vor, um die personalisierte PDF-Vorlage für Rücksendescheine in plentymarkets hochzuladen. Die PDF-Datei darf maximal 150 kB groß sein.
